Created Header usable on Mobile
Created the Navigation bar to be used on small devices

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 <body>
     <header>
         <h1>Awesome Caps</h1>
+        <input type="checkbox" id="nav-toggle" class="nav-toggle">
+        <label for="nav-toggle" class="nav-toggle-label">
+            <span></span>
+        </label>
         <nav>
             <ul>
                 <li><a href="#">Featured</a></li>
