Added Image/logo & started to add content
Added content. It's not behaving as I would like to, I need to change the position of the sections and footer, so they appear below the navbar

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 </head>
 <body>
     <header>
-        <h1>AwesomeCaps</h1>
+        <div class="logo-div">
+            <img src="./images/cap.png" alt="logo" class="logo-img">
+            <h1>AwesomeCaps</h1>
+        </div>
         <input type="checkbox" id="nav-toggle" class="nav-toggle">
         <label for="nav-toggle" class="nav-toggle-label">
             <span></span>
@@ -20,5 +23,14 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <section class="featured">
+            <h2>Lorem</h2>
+        </section>
+    </main>
+    <footer>
+        <p>Icons made by <a href="https://www.flaticon.com/authors/pixel-perfect" title="Pixel perfect">Pixel perfect</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a></p>
+    </footer>
+    
 </body>
 </html>
